--- a/src/app/pages/administracion/eventos/eventos.component.scss
+++ b/src/app/pages/administracion/eventos/eventos.component.scss
@@ -14,3 +14,10 @@ nb-checkbox {
 nb-card.inline-form-card nb-card-body {
   padding-bottom: 0;
 }
+
+.index {
+  display: none;
+}
+.panel {
+  display: none;
+}
