--- a/src/app/pages/administracion/eventos/eventos.component.html
+++ b/src/app/pages/administracion/eventos/eventos.component.html
@@ -1,22 +1,95 @@
 <div class="row">
     <div class="col-md-12">
-        <nb-card class="inline-form-card">
-            <nb-card-header>Inline form</nb-card-header>
+        <nb-card>
+            <nb-card-header>Administrar Eventos</nb-card-header>
             <nb-card-body>
-                <form>
-                    <div class="form-group">
-                        <label for="exampleInputEmail1">Email address</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+                <div class="" [ngClass]="{'index': showPanel}">
+                    <div class="col-lg-12">
+                        <ng2-smart-table [settings]="settings" [source]="eventos" (deleteConfirm)="onDeleteConfirm($event)">
+                        </ng2-smart-table>
                     </div>
-                    <div class="form-group">
-                        <label for="exampleInputPassword1">Password</label>
-                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                    <div class="col-lg-12">
+                        <button type="submit" class="btn btn-secondary" (click)="crear()">Nuevo</button>
+                        <button type="reset" class="btn btn-danger" (click)="modificar()">Editar</button>
+                        <button type="reset" class="btn btn-danger" (click)="changeStatus()">Activar/Desactivar</button>
                     </div>
-                    <div class="form-group">
-                        <nb-checkbox>Check me out</nb-checkbox>
-                    </div>
-                    <button type="submit" class="btn btn-danger">Submit</button>
-                </form>
+                </div>
+                <div class="" [ngClass]="{'panel': showIndex}">
+                    <form role="form" [formGroup]="formContainer" novalidate (ngSubmit)="save()" accept-charset="utf-8">
+                        <div class="row">
+                            <div class="col-lg-8">
+                                <div class="form-group">
+                                    <label>Evento</label>
+                                    <input type="text" class="form-control" formControlName="nombre">
+                                </div>
+                            </div>
+                            <div class="col-lg-4">
+                                <div class="form-group">
+                                    <label>Tipo Evento</label>
+                                    <select [(ngModel)]="tipo_evento_id" [ngModelOptions]="{standalone: true}" class="form-control">
+                                        <option *ngFor="let tipo_evento of tipo_eventos" [ngValue]="tipo_evento.id">{{tipo_evento.nombre}}</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-4">
+                                <div class="form-group">
+                                    <label>Fecha Pedido</label>
+                                    <input class="form-control" formControlName="fecha_pedido">
+                                </div>
+                            </div>
+                            <div class="col-lg-4">
+                                <div class="form-group">
+                                    <div class="form-group">
+                                        <label>Fecha Evento</label>
+                                        <input class="form-control" formControlName="fecha_evento">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-4">
+                                <div class="form-group">
+                                    <div class="form-group">
+                                        <label>Invitados</label>
+                                        <input type="number" class="form-control" formControlName="invitados">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <div class="form-group">
+                                    <label>Salon</label>
+                                    <select [(ngModel)]="salon_id" [ngModelOptions]="{standalone: true}" class="form-control">
+                                        <option *ngFor="let salon of salones" [ngValue]="salon.id">{{salon.nombre}}</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="form-group">
+                                    <label>Cliente</label>
+                                    <select [(ngModel)]="cliente_id" [ngModelOptions]="{standalone: true}" class="form-control">
+                                        <option *ngFor="let cliente of clientes" [ngValue]="cliente.id">{{cliente.nombre}}</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <div class="form-group">
+                                    <label>Detalle</label>
+                                    <textarea class="form-control" rows="3" formControlName="detalle"></textarea>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <button type="submit" class="btn btn-secondary">Guardar</button>
+                                <button type="reset" class="btn btn-danger" (click)="index()">Cancelar</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
             </nb-card-body>
         </nb-card>
     </div>
