--- a/src/app/pages/administracion/eventos/eventos.component.scss
+++ b/src/app/pages/administracion/eventos/eventos.component.scss
@@ -17,7 +17,9 @@ nb-card.inline-form-card nb-card-body {
 
 .index {
   display: none;
+  transition: 0.5s;
 }
 .panel {
   display: none;
+  transition: 0.5s;
 }
