--- a/src/app/pages/administracion/eventos/eventos.component.html
+++ b/src/app/pages/administracion/eventos/eventos.component.html
@@ -5,8 +5,28 @@
             <nb-card-body>
                 <div class="" [ngClass]="{'index': showPanel}">
                     <div class="col-lg-12">
-                        <ng2-smart-table [settings]="settings" [source]="eventos" (deleteConfirm)="onDeleteConfirm($event)">
-                        </ng2-smart-table>
+                        <!--<ng2-smart-table [settings]="settings" [source]="eventos" (deleteConfirm)="onDeleteConfirm($event)">
+                        </ng2-smart-table>-->
+                        <table class="table table-bordered table-hover">
+                            <thead>
+                            <tr>
+                                <th>#</th>
+                                <th>Evento</th>
+                                <th>Tipo Evento</th>
+                                <th>Invitados</th>
+                                <th>Estado</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr *ngFor="let item of eventos" (click)="select(item)">
+                                <th scope="row">{{item.id}}</th>
+                                <td>{{item.nombre}}</td>
+                                <td>{{getTipoEvento(item.tipo_evento_id)}}</td>
+                                <td>{{item.invitados}}</td>
+                                <td>{{item.estado_evento_id}}</td>
+                            </tr>
+                            </tbody>
+                        </table>
                     </div>
                     <div class="col-lg-12">
                         <button type="submit" class="btn btn-secondary" (click)="crear()">Nuevo</button>
