--- a/src/app/pages/administracion/clientes/clientes.component.html
+++ b/src/app/pages/administracion/clientes/clientes.component.html
@@ -5,28 +5,8 @@
             <nb-card-body>
                 <div class="" [ngClass]="{'index': showPanel}">
                     <div class="col-lg-12">
-                        <!--<ng2-smart-table [settings]="settings" [source]="clientes" (deleteConfirm)="onDeleteConfirm($event)">
-                        </ng2-smart-table>-->
-                        <table class="table table-bordered table-hover">
-                            <thead>
-                            <tr>
-                                <th>#</th>
-                                <th>Apellido</th>
-                                <th>Nombre</th>
-                                <th>Dirección</th>
-                                <th>Telefono</th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            <tr *ngFor="let item of clientes" (click)="select(item)">
-                                <th scope="row">{{item.id}}</th>
-                                <td>{{item.apellido}}</td>
-                                <td>{{item.nombre}}</td>
-                                <td>{{item.direccion}}</td>
-                                <td>{{item.telefono}}</td>
-                            </tr>
-                            </tbody>
-                        </table>
+                        <ng2-smart-table [settings]="settings" [source]="clientes" (rowSelect)="onRowSelect($event)">
+                        </ng2-smart-table>
                     </div>
                     <div class="col-lg-12">
                         <button type="submit" class="btn btn-secondary" (click)="crear()">Nuevo</button>
@@ -37,16 +17,22 @@
                 <div class="" [ngClass]="{'panel': showIndex}">
                     <form role="form" [formGroup]="formContainer" novalidate (ngSubmit)="save()" accept-charset="utf-8">
                         <div class="row">
-                            <div class="col-lg-6">
+                            <div class="col-lg-4">
                                 <div class="form-group">
                                     <label>Apellido</label>
                                     <input class="form-control" formControlName="apellido">
                                 </div>
                             </div>
-                            <div class="col-lg-6">
+                            <div class="col-lg-5">
                                 <div class="form-group">
                                     <label>Nombre</label>
                                     <input class="form-control" formControlName="nombre">
+                                </div>
+                            </div>
+                            <div class="col-lg-3">
+                                <div class="form-group">
+                                    <label>Cuil</label>
+                                    <input class="form-control" formControlName="cuil">
                                 </div>
                             </div>
                         </div>
@@ -57,44 +43,10 @@
                                     <input class="form-control" formControlName="direccion">
                                 </div>
                             </div>
-                            <div class="col-lg-6">
+                            <div class="col-lg-2">
                                 <div class="form-group">
                                     <label>Cod. Postal</label>
                                     <input class="form-control" formControlName="codigo_postal">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-lg-4">
-                                <div class="form-group">
-                                    <label>Pais</label>
-                                    <select [(ngModel)]="pais_id" [ngModelOptions]="{standalone: true}" class="form-control">
-                                        <option *ngFor="let pais of paises" [ngValue]="pais.id">{{pais.nombre}}</option>
-                                    </select>
-                                </div>
-                            </div>
-                            <div class="col-lg-4">
-                                <div class="form-group">
-                                    <label>Provincia</label>
-                                    <select [(ngModel)]="provincia_id" [ngModelOptions]="{standalone: true}" class="form-control">
-                                        <option *ngFor="let provincia of provincias" [ngValue]="provincia.id">{{provincia.nombre}}</option>
-                                    </select>
-                                </div>
-                            </div>
-                            <div class="col-lg-4">
-                                <div class="form-group">
-                                    <label>Localidad</label>
-                                    <select [(ngModel)]="localidad_id" [ngModelOptions]="{standalone: true}" class="form-control">
-                                        <option *ngFor="let localidad of localidades" [ngValue]="localidad.id">{{localidad.nombre}}</option>
-                                    </select>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-lg-4">
-                                <div class="form-group">
-                                    <label>Cuil</label>
-                                    <input class="form-control" formControlName="cuil">
                                 </div>
                             </div>
                             <div class="col-lg-4">
@@ -103,21 +55,44 @@
                                     <input class="form-control" formControlName="telefono">
                                 </div>
                             </div>
+                        </div>
+                        <div class="row">
                             <div class="col-lg-4">
                                 <div class="form-group">
-                                    <label>Empresa</label>
-                                    <input class="form-control" formControlName="empresa_id">
+                                    <label>Pais</label>
+                                    <select [(ngModel)]="pais_id" [ngModelOptions]="{standalone: true}"
+                                            class="form-control" >
+                                        <option *ngFor="let pais of paises" [ngValue]="pais.id">{{pais.nombre}}</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="col-lg-4">
+                                <div class="form-group">
+                                    <label>Provincia</label>
+                                    <select [(ngModel)]="provincia_id" [ngModelOptions]="{standalone: true}"
+                                            class="form-control" >
+                                        <option *ngFor="let provincia of provincias" [ngValue]="provincia.id">{{provincia.nombre}}</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="col-lg-4">
+                                <div class="form-group">
+                                    <label>Localidad</label>
+                                    <select [(ngModel)]="localidad_id" [ngModelOptions]="{standalone: true}"
+                                            class="form-control">
+                                        <option *ngFor="let localidad of localidades" [ngValue]="localidad.id">{{localidad.nombre}}</option>
+                                    </select>
                                 </div>
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-lg-6">
+                            <div class="col-lg-4">
                                 <div class="form-group">
                                     <label>Mail</label>
                                     <input class="form-control" formControlName="mail">
                                 </div>
                             </div>
-                            <div class="col-lg-6">
+                            <div class="col-lg-4">
                                 <div class="form-group">
                                     <label>Estado</label>
                                     <select class="form-control">
