--- a/src/app/pages/administracion/salones/salones.component.scss
+++ b/src/app/pages/administracion/salones/salones.component.scss
@@ -6,3 +6,8 @@
   display: none;
   transition: 0.5s;
 }
+
+.nb-theme-cosmic ng2-smart-table table tr th,
+.nb-theme-cosmic ng2-smart-table table tr td{
+  padding: 0.5rem 1rem !important;
+}
