--- a/src/app/pages/almacen/productos/productos.component.html
+++ b/src/app/pages/almacen/productos/productos.component.html
@@ -131,6 +131,9 @@
                             </div>
                         </div>
                         <div class="row">
+                            <upload-component [img]='foto' #foto_uploader></upload-component>
+                        </div>
+                        <div class="row">
                             <div class="col-lg-12">
                                 <button type="submit" class="btn btn-secondary">Guardar</button>
                                 <button type="reset" class="btn btn-danger" (click)="index()">Cancelar</button>
