--- a/src/app/pages/almacen/productos/productos.component.html
+++ b/src/app/pages/almacen/productos/productos.component.html
@@ -41,7 +41,7 @@
                         </table>
                     </div>
                     <div class="col-lg-12">
-                        <button type="submit" class="btn btn-secondary" (click)="crear()">Nuevo</button>
+                        <button type="submit" class="btn btn-primary" (click)="crear()">Nuevo</button>
                         <button type="reset" class="btn btn-danger" (click)="modificar()">Editar</button>
                         <button type="reset" class="btn btn-danger" (click)="changeStatus()">Activar/Desactivar</button>
                     </div>
@@ -135,7 +135,7 @@
                         </div>
                         <div class="row">
                             <div class="col-lg-12">
-                                <button type="submit" class="btn btn-secondary">Guardar</button>
+                                <button type="submit" class="btn btn-primary">Guardar</button>
                                 <button type="reset" class="btn btn-danger" (click)="index()">Cancelar</button>
                             </div>
                         </div>
