--- a/src/app/pages/almacen/proveedores/proveedores.component.html
+++ b/src/app/pages/almacen/proveedores/proveedores.component.html
@@ -43,7 +43,7 @@
                         </table>
                     </div>
                     <div class="col-lg-12">
-                        <button type="submit" class="btn btn-secondary" (click)="crear()">Nuevo</button>
+                        <button type="submit" class="btn btn-primary" (click)="crear()">Nuevo</button>
                         <button type="reset" class="btn btn-danger" (click)="modificar()">Editar</button>
                         <button type="reset" class="btn btn-danger" (click)="changeStatus()">Activar/Desactivar</button>
                     </div>
@@ -95,7 +95,7 @@
                                 <div class="form-group">
                                     <label>Pais</label>
                                     <select [(ngModel)]="pais_id" [ngModelOptions]="{standalone: true}"
-                                            class="form-control" >
+                                            (ngModelChange)="onChangePais($event)" class="form-control" >
                                         <option *ngFor="let pais of paises" [ngValue]="pais.id">{{pais.nombre}}</option>
                                     </select>
                                 </div>
@@ -104,7 +104,7 @@
                                 <div class="form-group">
                                     <label>Provincia</label>
                                     <select [(ngModel)]="provincia_id" [ngModelOptions]="{standalone: true}"
-                                            class="form-control" >
+                                            (ngModelChange)="onChangeProvincia($event)" class="form-control" >
                                         <option *ngFor="let provincia of provincias" [ngValue]="provincia.id">{{provincia.nombre}}</option>
                                     </select>
                                 </div>
@@ -137,7 +137,7 @@
                         </div>
                         <div class="row">
                             <div class="col-lg-12">
-                                <button type="submit" class="btn btn-secondary">Guardar</button>
+                                <button type="submit" class="btn btn-primary">Guardar</button>
                                 <button type="reset" class="btn btn-danger" (click)="index()">Cancelar</button>
                             </div>
                         </div>
