--- a/src/app/pages/administracion/eventos/eventos.component.html
+++ b/src/app/pages/administracion/eventos/eventos.component.html
@@ -8,8 +8,8 @@
                         <ng2-smart-table [settings]="settings" [source]="eventos" (rowSelect)="onRowSelect($event)">
                         </ng2-smart-table>
                     </div>
-                    <div class="col-lg-12">
-                        <button type="submit" class="btn btn-secondary" (click)="crear()">Nuevo</button>
+                    <div class="col-lg-12 margin-default">
+                        <button type="submit" class="btn btn-primary" (click)="crear()">Nuevo</button>
                         <button type="reset" class="btn btn-danger" (click)="modificar()">Editar</button>
                         <button type="reset" class="btn btn-danger" (click)="changeStatus()">Activar/Desactivar</button>
                     </div>
