--- a/src/app/pages/administracion/eventos/eventos.component.scss
+++ b/src/app/pages/administracion/eventos/eventos.component.scss
@@ -28,3 +28,7 @@ nb-card.inline-form-card nb-card-body {
 .nb-theme-cosmic ng2-smart-table table tr td{
   padding: 0.5rem 1rem !important;
 }
+
+.margin-default {
+  margin-top: 15px;
+}
