--- a/src/app/pages/administracion/eventos/eventos.component.html
+++ b/src/app/pages/administracion/eventos/eventos.component.html
@@ -10,7 +10,7 @@
                     </div>
                     <div class="col-lg-12 margin-default">
                         <button type="submit" class="btn btn-primary" (click)="crear()">Nuevo</button>
-                        <button type="reset" class="btn btn-danger" (click)="modificar()">Editar</button>
+                        <button type="reset" class="btn btn-primary" (click)="modificar()">Editar</button>
                         <button type="reset" class="btn btn-danger" (click)="changeStatus()">Activar/Desactivar</button>
                     </div>
                 </div>
